<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/label_connectOnStartup"
        android:summary="@string/label_summary_connectOnStartup"
        android:title="@string/label_connectOnStartup" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/config_default_alarmidentifier"
        android:inputType="textCapWords"
        android:key="@string/label_alarmidentifier"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/label_alarmidentifier" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/config_default_ip_master"
        android:inputType="textCapWords"
        android:key="@string/label_ip_master"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_ip_master"
        android:title="@string/label_ip_master" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@integer/config_default_port"
        android:inputType="numberDecimal"
        android:key="@string/label_port_master"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_port_master"
        android:title="@string/label_port_master" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/label_enableslave"
        android:summary="@string/label_summary_enableslave"
        android:title="@string/label_enableslave" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/config_default_alarmidentifier2"
        android:inputType="textCapWords"
        android:key="@string/label_alarmidentifier2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/label_alarmidentifier2" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/config_default_ip_slave"
        android:inputType="textCapWords"
        android:key="@string/label_ip_slave"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_ip_slave"
        android:title="@string/label_ip_slave" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@integer/config_default_port"
        android:inputType="numberDecimal"
        android:key="@string/label_port_slave"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_port_slave"
        android:title="@string/label_port_slave" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@integer/config_default_timeout"
        android:inputType="number"
        android:key="@string/label_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_timeout"
        android:title="@string/label_timeout" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@integer/config_default_interval"
        android:inputType="number"
        android:key="@string/label_updateinterval"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/label_summary_updateinterval"
        android:title="@string/label_updateinterval" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/label_debug"
        android:summary="@string/label_summary_debug"
        android:title="@string/label_debug" />

</PreferenceScreen>
